dapr/ingress/ingress-dapr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dapr
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-ingress-dapr
            port:
              number: 80
